@startuml

title __IMPL's Class Diagram__\n

  namespace  {
    namespace om.weddingplanner.server {
      namespace services {
        namespace impl {
          class com.weddingplanner.server.services.impl.AdvertisementServicesImpl {
              + add()
              + listAdvertisements()
              + removeById()
              + retrieveById()
              + searchAdvertisementsByUser()
              + updateAdvertisementDetails()
              + updateAdvertisementRating()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.weddingplanner.server {
      namespace services {
        namespace impl {
          class com.weddingplanner.server.services.impl.InquiryServiceImpl {
              + add()
              + addInquiry()
              + getInquiry()
              + listInquiries()
              + removeById()
              + removeInquiry()
              + retrieveById()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.weddingplanner.server {
      namespace services {
        namespace impl {
          class com.weddingplanner.server.services.impl.ReviewServiceImpl {
              + add()
              + addReview()
              + deleteReview()
              + getReview()
              + listReviewByAdvertisement()
              + listReviewsByUser()
              + removeById()
              + removeReview()
              + retrieveById()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.weddingplanner.server {
      namespace services {
        namespace impl {
          class com.weddingplanner.server.services.impl.UserServicesImpl {
              - passwordEncoder : BCryptPasswordEncoder
              + addAdminUser()
              + addBusinessOwner()
              + addCustomer()
              + getBusiness()
              + getCustomer()
              + isUserRegistered()
              + listBusinessOwners()
              + listCustomers()
              + removeBusinessOwner()
              + removeCustomer()
              + searchBusinessOwner()
              + updateBusinessAccountStatus()
              + updateBusinessOwnerProfile()
              + updateCustomerProfile()
              + updateCustomerStatus()
          }
        }
      }
    }
  }
  

  com.weddingplanner.server.services.impl.AdvertisementServicesImpl .up.|> com.weddingplanner.server.services.AdvertisementService
  com.weddingplanner.server.services.impl.AdvertisementServicesImpl o-- com.weddingplanner.server.services.crudoperations.AdvertisementRepo : advertisementRepo
  com.weddingplanner.server.services.impl.InquiryServiceImpl .up.|> com.weddingplanner.server.services.InquiryService
  com.weddingplanner.server.services.impl.InquiryServiceImpl o-- com.weddingplanner.server.services.crudoperations.InquiryRepo : inquiryRepo
  com.weddingplanner.server.services.impl.ReviewServiceImpl .up.|> com.weddingplanner.server.services.ReviewService
  com.weddingplanner.server.services.impl.ReviewServiceImpl o-- com.weddingplanner.server.services.crudoperations.AdvertisementRepo : advertisementRepo
  com.weddingplanner.server.services.impl.ReviewServiceImpl o-- com.weddingplanner.server.services.AdvertisementService : advertisementService
  com.weddingplanner.server.services.impl.ReviewServiceImpl o-- com.weddingplanner.server.services.crudoperations.ReviewRepo : reviewRepo
  com.weddingplanner.server.services.impl.UserServicesImpl .up.|> com.weddingplanner.server.services.UserService
  com.weddingplanner.server.services.impl.UserServicesImpl o-- com.weddingplanner.server.services.crudoperations.AdminRepo : adminRepo
  com.weddingplanner.server.services.impl.UserServicesImpl o-- com.weddingplanner.server.services.crudoperations.BusinessOwnerRepo : businessOwnerRepo
  com.weddingplanner.server.services.impl.UserServicesImpl o-- com.weddingplanner.server.services.crudoperations.CustomerRepo : customerRepo
  com.weddingplanner.server.services.impl.UserServicesImpl o-- com.weddingplanner.server.services.crudoperations.InquiryRepo : inquiryRepo
  com.weddingplanner.server.services.impl.UserServicesImpl o-- com.weddingplanner.server.services.crudoperations.SystemUserRepository : systemUserRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
